Fixed strange-looking scrollbars Added line numbers

--- a/static/layout.css
+++ b/static/layout.css
@@ -1,32 +1,50 @@
+:root {
+    --font-size: 12px;
+    --line-height: 15px;
+    --font-family: monospace;
+    --box-padding: 1.5% 2.5%;
+}
+
 body {
     background-color: #2b2b2b;
-    padding: 2% 4%;
-    margin: 0;
 }
 
 textarea {
+    font-size: var(--font-size);
+    line-height: var(--line-height);
+    font-family: var(--font-family);
+    color: white;
     background: 0 0;
     border: 0;
-    color: white;
-    padding: 0;
+    padding: var(--box-padding);
     width: 100%;
-    height: 90vh;
-    font-family: monospace;
+    height: 99vh;
     outline: none;
     resize: none;
-    font-size: 12px;
-    line-height: 15px;
 }
 
 #codeBox {
-    font-size: 12px;
-    line-height: 15px;
-    background: 0 0; !important;
+    font-size: var(--font-size);
+    line-height: var(--line-height);
+    font-family: var(--font-family);
+    background: 0 0 !important;
     margin: 0;
-    padding: 0;
-    font-family: monospace;
+    padding: var(--box-padding);
+    width: 100%;
+    height: 100vh;
+    display: flex;
 }
 
+#codeLines {
+    font-size: var(--font-size);
+    line-height: var(--line-height);
+    font-family: var(--font-family);
+    text-align: right;
+    left: 0;
+    color: #787878;
+    width: 2%;
+    padding-right: 30px;
+}
 
 .buttons {
     background-color: #515658;
@@ -43,7 +61,7 @@ textarea {
 }
 
 .invisible {
-    display: none; !important;
+    display: none !important;
 }
 
 i.material-icons {
@@ -72,12 +90,15 @@ a {
     padding: 0.6% 0.6% 0.8% 0.8%;
     position: fixed;
     bottom: 5%;
+    left: 5%;
 }
 
 .textBar > i.material-icons {
     font-size: 0.8rem;
-    -moz-user-select: none;
     -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 .textBar.show {
@@ -85,7 +106,6 @@ a {
     animation: fadeIn 0.5s;
     -webkit-animation: fadeIn 0.5s;
 }
-
 
 @keyframes fadeIn {
     from {bottom: 0}
@@ -96,7 +116,6 @@ a {
     from {bottom: 0}
     to {bottom: 5%}
 }
-
 
 /* Materialize */
 
